# frank-cabal

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh
drivers/: HDMI.c  dlmalloc.c  psram_allocator.c  psram_allocator.h
drivers/audio/: CMakeLists.txt  audio.c  audio.h
drivers/ps2/: CMakeLists.txt  ps2.c
drivers/ps2kbd/: CMakeLists.txt  ps2kbd_wrapper.cpp  ps2kbd_wrapper.h
drivers/ps2mouse/: ps2mouse_wrapper.c  ps2mouse_wrapper.h
drivers/usbhid/: debug.h  usbkbd_wrapper.c
linker/: memmap_cabal.ld
src/: board_config.h  cabal_fs.c  cabal_fs.h  cabal_main.cpp  cabal_memory.cpp  cabal_new.cpp  cabal_sbrk.c  main.c
src/backends/: base-backend.cpp
src/backends/audiocd/rp2350/: rp2350-audiocd.h
src/backends/fonts/: font-provider.h
src/backends/fs/rp2350/: rp2350-fs-factory.cpp  rp2350-fs-factory.h  rp2350-fs.cpp  rp2350-fs.h
src/backends/platform/rp2350/: rp2350-minimal.cpp  rp2350-minimal.h  rp2350-system.cpp  rp2350-system.h  rp2350.cpp  rp2350.h
src/backends/platform/sdl/macosx/: macosx.h
src/backends/timer/default/: default-timer.cpp
src/base/: plugins.cpp
src/common/: hashmap.h  scummsys.h  system.cpp  textconsole.cpp
src/engines/: dialogs.cpp  engine.cpp  plugins_table.h
src/engines/buried/: biochip_right.h
src/engines/gob/: game.cpp  gob.cpp  hotspots.cpp  hotspots.h  init.cpp  inter.cpp  inter_v1.cpp  mult_v2.cpp  resources.cpp  resources.h  script.cpp  util.cpp  video.cpp
src/engines/kyra/: kyra_v1.cpp  resource.cpp  resource_intern.cpp  staticres.cpp
src/engines/sci/: console.cpp  resource.cpp
src/engines/sci/engine/: features.cpp  kgraphics.cpp  kvideo.cpp  state.cpp
src/engines/sci/graphics/: maciconbar.cpp
src/engines/sci/sound/: audio.cpp  soundcmd.cpp
src/engines/scumm/: dialogs.cpp  input.cpp  resource.cpp
src/engines/scumm/imuse/: imuse.cpp
src/engines/scumm/smush/: codec37.cpp
src/fatfs/: ffsystem.c
src/graphics/scaler/: thumbnail_stub.cpp
src/gui/: ThemeEval.h  about.h  debugger.h  dialog.h  gui-manager.cpp  gui-manager.h  message.h  predictivedialog.h  saveload.h  widget.h
src/gui/widgets/: list.h
